# docker_covid

./: .env  .env.example  .gitattributes  .gitignore  .gitkeep  Makefile  README.md  check_code_smell_parser.py  cli.py  docker-compose.yml  dvc.yaml  fix_style.sh  image_processor.py  params.yaml  plan_de_base.txt  prepro.py  pyproject.toml  setup.sh  start_local.sh  start_services.sh  test.ipynb  verify.sh
.dvc/: config
.github/workflows/: cicd.yml  dashboard.yml  docker-images.yml
app/: streamlit_app.py
backend/: requirements-dev.txt  requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/src/: __init__.py
dashboard/: app.py  backlog.yaml  state.json
dashboard/static/: style.css
dashboard/templates/: data_explorer.html  index.html
data/: .gitignore  raw.dvc
data-service/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
data-service/tests/: test_health.py
docker/base/: Dockerfile
docker/core/: Dockerfile
docker/mlflow/: Dockerfile
docker/streamlit/: Dockerfile
docker/trainer/: Dockerfile
docs/: ARCHITECTURE_MICROSERVICES.md  plan_de_base.txt  us-verification.md
frontend/: _nav.py  _styles.py  requirements.txt  streamlit_app.py
frontend/page/: 01_accueil.py  02_donnees.py  03_preprocessing.py  04_Machine_learning_et_optimisation.py  05_Deep_learning_et_Interprétabilité.py  06_cicd.py  07_conclusion_critique_perspective.py  __init__.py  _loader.py
infrastructure/: docker-compose.yml  dvc_container_config.local
infrastructure/kubernetes/: backend.yaml  ingress.yaml  mlflow.yaml  namespace.yaml  storage.yaml  streamlit.yaml
infrastructure/scripts/: check_quality.sh  check_requirements.sh  dvc_security_demo.sh  fix_style.sh  log_dataset_mlflow.py  setup.sh  start_local.sh  start_services.sh
k8s/: configmap.yaml
log-service/: app.py
requirements/: base.txt  ds_covid.txt  local.txt  streamlit.txt  trainer.txt
scripts/: evaluate.py  preprocess.py  train.py
shared/: logging_config.py
src/: requirements.txt
src/ds_covid/: __init__.py  cli.py  features.py  models.py  visualization.py
src/features/: apply_masks.py  (+1 more)
(+191 files in other folders)
